--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,18 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.dart_tool
+ios/
+.idea/
+build/
+test/
+linux/
+macos/
+web/
+windows/
+android/
+.idea/
+
 
 # IntelliJ related
 *.iml
